kubernetes/monitoring/influxdb/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb
  namespace: influxdb
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`influxdb.lan.juusoleinonen.fi`)
      priority: 10
      services:
        - name: influxdb
          port: 80
      middlewares:
        - name: ipwhitelist
          namespace: influxdb
  tls:
    secretName: influxdb-certificate
